# obsidian-sqlite-vtab

./: Cargo.toml  justfile
src/: lib.rs  notes.rs  notes_vtab.rs  obsidian_notes.rs  properties.rs
test_data/: an-ignored-file.x  basic.md  list.md  properties.md  txt-format.txt
test_data/nested/: note.md
